testsuite/tests/type-data/should_fail/all.T
test('TDNoPragma', normal, compile_fail, [''])
test('TDBadConsConstraint', normal, compile_fail, [''])
test('TDDeriving', normal, compile_fail, [''])
test('TDExpression', normal, compile_fail, [''])
test('TDMultiple01', normal, compile_fail, [''])
test('TDMultiple02', normal, compile_fail, [''])
test('TDPattern', normal, compile_fail, [''])
test('TDPunning', normal, compile_fail, [''])
test('TDRecordsGADT', normal, compile_fail, [''])
test('TDRecordsH98', normal, compile_fail, [''])
test('TDRecursive', normal, compile_fail, [''])
test('TDStrictnessGADT', normal, compile_fail, [''])
test('TDStrictnessH98', normal, compile_fail, [''])
test('TDTagToEnum', normal, compile_fail, [''])
test('T22332b', normal, compile_fail, [''])
